Fix for duplicate games on the list.